salesforce/force-app/main/default/objects/D360_Evidence__c/D360_Evidence__c.object-meta.xml
<CustomObject>
    <description>Evidence signal explaining why a recovery account was selected.</description>
    <label>D360 Evidence</label>
    <nameField>
        <label>Evidence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D360 Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>