salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>true</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>