salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contract</fullName><default>false</default><label>Contract</label></value>
            <value><fullName>Product Usage</fullName><default>false</default><label>Product Usage</label></value>
            <value><fullName>Service Case</fullName><default>false</default><label>Service Case</label></value>
            <value><fullName>Marketing Engagement</fullName><default>false</default><label>Marketing Engagement</label></value>
            <value><fullName>Sales Activity</fullName><default>false</default><label>Sales Activity</label></value>
            <value><fullName>Data Quality</fullName><default>false</default><label>Data Quality</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>