salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Goal_Run__c.field-meta.xml
<CustomField>
    <fullName>Goal_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Run</label>
    <referenceTo>D360_Goal_Run__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>