salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Observed_At__c.field-meta.xml
<CustomField>
    <fullName>Observed_At__c</fullName>
    <label>Observed At</label>
    <type>DateTime</type>
</CustomField>