salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Recovery_Account__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recovery Account</label>
    <referenceTo>D360_Recovery_Account__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>