salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Signal__c.field-meta.xml
<CustomField>
    <fullName>Signal__c</fullName>
    <label>Signal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>