salesforce/force-app/main/default/objects/D360_Evidence__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Data360</fullName><default>true</default><label>Data360</label></value>
            <value><fullName>Sales Cloud</fullName><default>false</default><label>Sales Cloud</label></value>
            <value><fullName>Service Cloud</fullName><default>false</default><label>Service Cloud</label></value>
            <value><fullName>Marketing Cloud</fullName><default>false</default><label>Marketing Cloud</label></value>
            <value><fullName>Product Telemetry</fullName><default>false</default><label>Product Telemetry</label></value>
            <value><fullName>Agentforce</fullName><default>false</default><label>Agentforce</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>