salesforce/force-app/main/default/objects/D360_Evidence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Evidence_Type__c</columns>
    <columns>Signal__c</columns>
    <columns>Confidence__c</columns>
    <columns>Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Evidence</label>
</ListView>